--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -21,7 +21,7 @@
   "branches_to_filter": [],
   "skip_source_output_uploading": false,
   "need_preview_pull_request": false,
-  "contribution_branch_mappings": {"branchBB":"branchAA"},
+  "contribution_branch_mappings": {"branchAA":"branchBB"},
   "dependent_repositories": [
     {
       "path_to_root": "_themes",
